--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -21,15 +21,110 @@
       "source": [
         "**Q1.** This question provides some practice cleaning variables which have common problems.\n",
         "1. Numeric variable: For `./data/airbnb_hw.csv`, clean the `Price` variable as well as you can, and explain the choices you make. How many missing values do you end up with? (Hint: What happens to the formatting when a price goes over 999 dollars, say from 675 to 1,112?)\n",
-        "2. Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing? \n",
+        "2. Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing?\n",
         "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
         "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
       ]
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Q 1.1"
+      ],
+      "metadata": {
+        "id": "OmPG7a1efaU3"
+      },
+      "id": "OmPG7a1efaU3"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import necessary packages\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "NZcnaU9Wegf0"
+      },
+      "id": "NZcnaU9Wegf0",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# read in airbnb csv file\n",
+        "df = pd.read_csv('./data/airbnb_hw.csv',low_memory=False)"
+      ],
+      "metadata": {
+        "id": "qBiogMKgekmi"
+      },
+      "id": "qBiogMKgekmi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# clean the price variable"
+      ],
+      "metadata": {
+        "id": "QYiVJnh5e6AY"
+      },
+      "id": "QYiVJnh5e6AY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q 1.2"
+      ],
+      "metadata": {
+        "id": "d4G37A_EfeAP"
+      },
+      "id": "d4G37A_EfeAP"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# read in police csv file\n",
+        "df = pd.read_csv('./data/mn_police_use_of_force.csv',low_memory=False)"
+      ],
+      "metadata": {
+        "id": "4rzWIVubflIn"
+      },
+      "id": "4rzWIVubflIn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q 1.3"
+      ],
+      "metadata": {
+        "id": "iznDIdlgffnV"
+      },
+      "id": "iznDIdlgffnV"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q 1.4"
+      ],
+      "metadata": {
+        "id": "Lu6UDBKdfhea"
+      },
+      "id": "Lu6UDBKdfhea"
+    },
+    {
+      "cell_type": "markdown",
       "id": "5a60a44e",
-      "metadata": {},
+      "metadata": {
+        "id": "5a60a44e"
+      },
       "source": [
         "**Q2.** Go to https://sharkattackfile.net/ and download their dataset on shark attacks.\n",
         "\n",
