Brief written explanation of steps taken to clean Price variable for Q 1.1

--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -74,10 +74,10 @@
       ],
       "metadata": {
         "id": "QYiVJnh5e6AY",
-        "outputId": "ab639767-77ed-4997-ba6b-ef236ac12865",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ab639767-77ed-4997-ba6b-ef236ac12865"
       },
       "id": "QYiVJnh5e6AY",
       "execution_count": 8,
@@ -120,12 +120,12 @@
         "df.head(5)"
       ],
       "metadata": {
-        "id": "dUEgFFskpqAH",
-        "outputId": "ea0a7a38-c33a-417f-e3df-1ac55743a5ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        }
+        },
+        "id": "dUEgFFskpqAH",
+        "outputId": "ea0a7a38-c33a-417f-e3df-1ac55743a5ec"
       },
       "id": "dUEgFFskpqAH",
       "execution_count": 11,
@@ -506,12 +506,12 @@
         "print(df[var].hist()) # see value counts as bar graph"
       ],
       "metadata": {
-        "id": "HGboOuJ3rsri",
-        "outputId": "665183db-05dc-4ef9-8d62-1800f168f5a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "HGboOuJ3rsri",
+        "outputId": "665183db-05dc-4ef9-8d62-1800f168f5a0"
       },
       "id": "HGboOuJ3rsri",
       "execution_count": 12,
@@ -614,11 +614,11 @@
         "print(df[var].unique(),'\\n') # list of unique values"
       ],
       "metadata": {
-        "id": "AkiDqk2UulgI",
-        "outputId": "4caab8b7-cae9-4d37-b1c2-b921e72dd53e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AkiDqk2UulgI",
+        "outputId": "4caab8b7-cae9-4d37-b1c2-b921e72dd53e"
       },
       "id": "AkiDqk2UulgI",
       "execution_count": 14,
@@ -685,11 +685,11 @@
         "print('After coercion: \\n', df[var].describe(),'\\n')"
       ],
       "metadata": {
-        "id": "vTvLT1p2tln1",
-        "outputId": "754bd4ef-c306-4987-d4bc-de9980a38475",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vTvLT1p2tln1",
+        "outputId": "754bd4ef-c306-4987-d4bc-de9980a38475"
       },
       "id": "vTvLT1p2tln1",
       "execution_count": 16,
@@ -722,12 +722,12 @@
         "print(df[var].hist(bins = 50)) # see value counts as bar graph"
       ],
       "metadata": {
-        "id": "XVmKq3ZzxZk9",
-        "outputId": "497dc5f3-91b5-4ec3-baba-33bd6fcaf625",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "XVmKq3ZzxZk9",
+        "outputId": "497dc5f3-91b5-4ec3-baba-33bd6fcaf625"
       },
       "id": "XVmKq3ZzxZk9",
       "execution_count": 18,
@@ -811,7 +811,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "To clean the Price variable, I firstly removed the commas from any of the values that were over 3 digits. Then because the values were strings, which doesn't make much sense for the price variable, I coerced them to be numeric values."
+      ],
       "metadata": {
         "id": "OB1oR7Fjx9k6"
       },
