Save reasoning for Q 1.4

--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -48,7 +48,7 @@
         "id": "NZcnaU9Wegf0"
       },
       "id": "NZcnaU9Wegf0",
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 397
+          "height": 469
         },
         "id": "dUEgFFskpqAH",
         "outputId": "ea0a7a38-c33a-417f-e3df-1ac55743a5ec"
@@ -1451,7 +1451,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 210
+          "height": 230
         },
         "id": "WeL4YPac68Nk",
         "outputId": "0ed20203-2fbc-4306-9d3c-c9b17b5c9d62"
@@ -1832,7 +1832,7 @@
         "id": "NQamNeYX81kc"
       },
       "id": "NQamNeYX81kc",
-      "execution_count": 28,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1841,15 +1841,15 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "Djcz3Xgb9wGR",
-        "outputId": "5006457b-a915-464d-8039-76bba31fac7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 264
-        }
+          "height": 256
+        },
+        "id": "Djcz3Xgb9wGR",
+        "outputId": "69758365-60c1-4410-dbb6-fb868fe6b9af"
       },
       "id": "Djcz3Xgb9wGR",
-      "execution_count": 29,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1950,7 +1950,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2e9f2f79-b03f-4c07-ab6e-d382020270da\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-15ab5628-9243-47de-8299-af94f7d19025\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2120,7 +2120,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2e9f2f79-b03f-4c07-ab6e-d382020270da')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-15ab5628-9243-47de-8299-af94f7d19025')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2172,12 +2172,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2e9f2f79-b03f-4c07-ab6e-d382020270da button.colab-df-convert');\n",
+              "        document.querySelector('#df-15ab5628-9243-47de-8299-af94f7d19025 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2e9f2f79-b03f-4c07-ab6e-d382020270da');\n",
+              "        const element = document.querySelector('#df-15ab5628-9243-47de-8299-af94f7d19025');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2197,8 +2197,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9011f603-762e-4a72-bd7b-4136be5b0aba\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9011f603-762e-4a72-bd7b-4136be5b0aba')\"\n",
+              "<div id=\"df-3cd41bae-5d5f-488a-a3c5-7370fe7f5a0f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3cd41bae-5d5f-488a-a3c5-7370fe7f5a0f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2317,7 +2317,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9011f603-762e-4a72-bd7b-4136be5b0aba button');\n",
+              "        document.querySelector('#df-3cd41bae-5d5f-488a-a3c5-7370fe7f5a0f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2333,14 +2333,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 29
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Total number of columns (709) exceeds max_columns (20) limiting to first (20) columns.\n"
-          ]
+          "execution_count": 14
         }
       ]
     },
@@ -2353,11 +2346,11 @@
         "print(df[var].value_counts())"
       ],
       "metadata": {
-        "id": "fToJb1lV-mtF",
-        "outputId": "7858dfd3-42f5-451b-9412-752b08fcb7bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fToJb1lV-mtF",
+        "outputId": "7858dfd3-42f5-451b-9412-752b08fcb7bc"
       },
       "id": "fToJb1lV-mtF",
       "execution_count": 30,
@@ -2412,11 +2405,11 @@
         "print(df[var].value_counts())"
       ],
       "metadata": {
-        "id": "bILRWzzwAF-4",
-        "outputId": "0148639a-d3d7-4108-ee21-668d93b57c3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bILRWzzwAF-4",
+        "outputId": "0148639a-d3d7-4108-ee21-668d93b57c3c"
       },
       "id": "bILRWzzwAF-4",
       "execution_count": 32,
@@ -2454,14 +2447,14 @@
         "print(df[var].value_counts())"
       ],
       "metadata": {
-        "id": "OUJdwQFUAl0F",
-        "outputId": "1b061e7c-2266-4ded-8296-22f9e779109e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OUJdwQFUAl0F",
+        "outputId": "cbf02103-15fb-4584-dc8d-1ac01dc4bfb5"
       },
       "id": "OUJdwQFUAl0F",
-      "execution_count": 33,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2587,20 +2580,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# look at SentenceTypeAllChargesAtConvictionInContactEvent\n",
+        "# hint: look at SentenceTypeAllChargesAtConvictionInContactEvent\n",
         "var = 'SentenceTypeAllChargesAtConvictionInContactEvent'\n",
         "print(df[var].unique(),'\\n')\n",
         "print(df[var].value_counts())"
       ],
       "metadata": {
-        "id": "ofknXhUmAtRw",
-        "outputId": "5bc734aa-5495-4557-9077-c7cb585572a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ofknXhUmAtRw",
+        "outputId": "a2c74ac5-016a-4068-dc38-d47238a6de82"
       },
       "id": "ofknXhUmAtRw",
-      "execution_count": 34,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2618,6 +2611,193 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# clean ImposedSentenceAllChargeInContactEvent\n",
+        "var = 'ImposedSentenceAllChargeInContactEvent'\n",
+        "\n",
+        "# change empty string to NaN\n",
+        "df[var] = df[var].replace(' ', np.nan)"
+      ],
+      "metadata": {
+        "id": "0CGqmBZpdEn4"
+      },
+      "id": "0CGqmBZpdEn4",
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df[var].unique(),'\\n')"
+      ],
+      "metadata": {
+        "id": "2dZja4quf5DZ",
+        "outputId": "926ee482-72b3-4b54-f42d-9bb943e54c68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "2dZja4quf5DZ",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[nan '60' '12' '.985626283367556' '36' '6' '24' '5.91375770020534' '120'\n",
+            " '72' '11.9917864476386' '0' '2.95687885010267' '84' '108' '300' '240'\n",
+            " '180' '4' '96' '2' '54' '.328542094455852' '44' '5' '115' '132' '48'\n",
+            " '258' '34' '76' '.164271047227926' '.131416837782341' '111' '9' '3'\n",
+            " '1.97125256673511' '36.9856262833676' '.0657084188911704'\n",
+            " '35.4928131416838' '106.492813141684' '8' '35' '18.3141683778234' '480'\n",
+            " '32' '93' '234' '732' '1.16427104722793' '4.6570841889117' '21' '7'\n",
+            " '4.49281314168378' '18' '600' '43.1642710472279' '179' '52' '30' '20'\n",
+            " '192' '702' '14' '55' '53' '11.9055441478439' '114' '35.0061601642711'\n",
+            " '68' '.657084188911704' '46.6242299794661' '102' '65' '200' '57'\n",
+            " '24.3285420944559' '12.1642710472279' '117' '81.4928131416838'\n",
+            " '22.4928131416838' '1980' '3.6570841889117' '56' '10' '2.79260780287474'\n",
+            " '1' '47' '22' '1500' '40' '284' '11' '118' '42' '162' '156'\n",
+            " '47.2956878850103' '105' '51' '246' '29' '75' '324' '360'\n",
+            " '34.4804928131417' '120.328542094456' '59.9260780287474' '66'\n",
+            " '59.9917864476386' '660' '51.1642710472279' '14.9568788501027'\n",
+            " '3.98562628336756' '78' '228' '1.47843942505133' '62' '4.8' '86' '168'\n",
+            " '23' '33' '48.0328542094456' '720' '348' '1200' '27' '49' '87' '420' '63'\n",
+            " '79.9260780287474' '57.0349075975359' '49.9712525667351'\n",
+            " '59.4928131416838' '17' '238.492813141684' '60.9856262833676' '126' '45'\n",
+            " '158' '216' '227' '42.9568788501027' '445' '70.952772073922' '516'\n",
+            " '177.82135523614' '1752' '90' '1080' '141' '4.82956878850103' '230' '31'\n",
+            " '2208' '52.5133470225873' '69' '26' '33.4928131416838' '140' '131' '344'\n",
+            " '219' '101' '71' '59' '58' '120.197125256674' '67' '35.4004106776181'\n",
+            " '3.28542094455852' '40.1642710472279' '91' '1.7741273100616' '155'\n",
+            " '34.4928131416838' '81' '92.3285420944559' '3.5482546201232' '207' '74'\n",
+            " '518' '28' '8.95687885010267' '237' '404.673511293634' '18.1642710472279'\n",
+            " '10.7433264887064' '551' '39' '15' '124' '43' '176' '19.4928131416838'\n",
+            " '482' '129' '88' '46' '45.8542094455852' '128.628336755647'\n",
+            " '136.492813141684' '108.328542094456' '50' '363.663244353183' '288' '250'\n",
+            " '107' '81.0225872689938' '444' '205' '10.6570841889117' '19'\n",
+            " '66.9856262833676' '38.4928131416838' '264' '276' '173' '222' '144' '294'\n",
+            " '336' '431' '450' '73' '99.3285420944559' '128' '30.8069815195072'\n",
+            " '31.5256673511294' '127' '202' '55.3285420944559' '89' '242'\n",
+            " '1.31416837782341' '1029' '.788501026694045' '194.858316221766' '399'\n",
+            " '39.6570841889117' '56.95687885' '198' '120.985626283368'\n",
+            " '47.6570841889117' '148' '6.8993839835729' '65.3285420944559'\n",
+            " '5.95277207392197' '.0985626283367557' '3.32854209445585'\n",
+            " '3.94250513347023' '12.9856262833676' '6.98562628336756'\n",
+            " '13.1498973305955' '15.1642710472279' '17.1971252566735'\n",
+            " '17.9137577002053' '104' '212' '24.6570841889117' '72.6570841889117'\n",
+            " '2.98562628336756' '144.985626283368' '31.9712525667351' '183'\n",
+            " '4.98562628336756' '11.8213552361396' '252' '12.394250513347'\n",
+            " '42.4928131416838' '10.1642710472279' '11.1642710472279'\n",
+            " '5.49281314168378' '59.6632443531827' '12.3285420944559'\n",
+            " '48.9856262833676' '240.985626283368' '2.6570841889117' '540'\n",
+            " '2.97125256673511' '6.32854209445585' '23.6632443531828'\n",
+            " '133.657084188912' '35.3285420944559' '456' '103' '1.72279260780287'\n",
+            " '12.6570841889117' '11.6570841889117' '60.3285420944559'\n",
+            " '3.78850102669405' '576' '2.13141683778234' '492' '14.9856262833676'\n",
+            " '24.9856262833676' '61.9712525667351' '5.6570841889117' '16'\n",
+            " '42.1642710472279' '.492813141683778' '138' '13.3141683778234'\n",
+            " '11.8932238193018' '5.32854209445585' '95' '62.6570841889117'\n",
+            " '3.08829568788501' '11.8275154004107' '1.64271047227926'\n",
+            " '47.9917864476386' '4.27104722792608' '8.32854209445585'\n",
+            " '3.31416837782341' '70' '77' '1.09856262833676' '48.1642710472279'\n",
+            " '27.4928131416838' '6.93839835728953' '1011' '.68993839835729'\n",
+            " '1.1170431211499' '1.49281314168378' '4.16427104722793'\n",
+            " '1.19712525667351' '4.07392197125257' '188' '11.3285420944559'\n",
+            " '.0328542094455852' '432' '11.952772073922' '36.4928131416838'\n",
+            " '23.9835728952772' '9.98562628336756' '98' '36.3285420944559' '112'\n",
+            " '.394250513347023' '13' '.262833675564682' '13.7987679671458'\n",
+            " '5.8870636550308' '354' '5.91991786447639' '24.1642710472279'\n",
+            " '62.95687885' '4.59958932238193' '123' '2.32854209445585'\n",
+            " '23.9240246406571' '204' '197' '174' '16.1498973305955' '840' '440'\n",
+            " '98.95687885' '17.952772073922' '63.9425051334702' '60.1314168377823'\n",
+            " '12.1314168377823' '172.952772073922' '.197125256673511'\n",
+            " '138.164271047228' '4.92813141683778' '.919917864476386'\n",
+            " '18.9856262833676' '6.6570841889117' '2.85420944558522'\n",
+            " '8.91375770020534' '146' '12.4928131416838' '.558521560574949'\n",
+            " '.722792607802875' '5.82135523613963' '84.9856262833676'\n",
+            " '6.16427104722793' '15.9856262833676' '64.5585215605749'\n",
+            " '38.299794661191' '11.958932238193' '3.1211498973306' '126.328542094456'\n",
+            " '5.16427104722793' '64' '42.6570841889117' '312' '19.9712525667351'\n",
+            " '82.3285420944559' '23.9712525667351' '17.6242299794661'\n",
+            " '121.971252566735' '59.6550308008214' '1.32854209445585'\n",
+            " '7.97125256673511' '1.91991786447639' '.525667351129363'\n",
+            " '9.32854209445585' '42.9856262833676' '41.9137577002053'\n",
+            " '72.9856262833676' '12.4784394250513' '5.19096509240246' '473'\n",
+            " '16.6570841889117' '109' '86.3285420944559' '41' '1.90554414784394'\n",
+            " '94.1642710472279' '302' '4.39425051334702' '10.8213552361396'\n",
+            " '18.3285420944559' '154' '83' '110.956878850103' '226' '96.0328542094456'\n",
+            " '4.82135523613963' '30.3285420944559' '37.9712525667351'\n",
+            " '50.4640657084189' '286' '99' '99.4928131416838' '2.6611909650924'\n",
+            " '70.9712525667351' '13.9712525667351' '23.6570841889117'\n",
+            " '.459958932238193' '132.492813141684' '283' '49.3141683778234'\n",
+            " '27.9856262833676' '38' '7.6570841889117' '83.6550308008214'\n",
+            " '10.9199178644764' '162.328542094456' '37' '132.328542094456'\n",
+            " '35.952772073922' '165' '10.9856262833676' '20.1642710472279'\n",
+            " '2.59137577002053' '175' '180.985626283368' '10.3285420944559'\n",
+            " '36.1642710472279' '120.657084188912' '232' '152' '8.98562628336756'\n",
+            " '167' '11.0657084188912' '11.2032854209446' '5.19712525667351'\n",
+            " '3.16427104722793' '60.1642710472279' '1.18275154004107'\n",
+            " '21.1642710472279' '2.19712525667351' '4.19712525667351'\n",
+            " '2.62833675564682' '119.952772073922' '119.958932238193'\n",
+            " '9.49281314168378' '5.25667351129363' '15.3285420944559'\n",
+            " '2.82135523613963' '192.985626283368' '48.6570841889117'\n",
+            " '5.95687885010267' '2.29979466119097' '960' '2.36550308008214' '116'\n",
+            " '19.5133470225873' '1.6570841889117'] \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# want to convert values to numeric\n",
+        "var = 'ImposedSentenceAllChargeInContactEvent'\n",
+        "df[var] = pd.to_numeric(df[var], errors='coerce')\n",
+        "\n",
+        "print('After coercion: \\n', df[var].describe(),'\\n')"
+      ],
+      "metadata": {
+        "id": "JBcQTNlnjtW7",
+        "outputId": "b0aced5e-0781-4642-af86-83fd68532c1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "JBcQTNlnjtW7",
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "After coercion: \n",
+            " count   13933\n",
+            "mean       20\n",
+            "std        64\n",
+            "min         0\n",
+            "25%         0\n",
+            "50%         2\n",
+            "75%        12\n",
+            "max      2208\n",
+            "Name: ImposedSentenceAllChargeInContactEvent, dtype: float64 \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To clean the ImposedSentenceAllChargeInContactEvent variable, I first noticed a missing value and replaced it with NaN. Then I coerced the values to be numeric values. The values are expressed in months, with the decimal fractions expressing fractions of months, or a certain number of days. When looking at the other related variable, SentenceTypeAllChargesAtConvictionInContactEvent, it seems like the main 3 differentiations recognized are 0 for no probation, 1 for jail up to 12 months, and 2 for prison for one year or more. So, my interpretation of this hint is that these decimal values can be cleaned further by simplifying the numbers and simply showing whether the imposed sentence is less or more than 12 months as it seems that that is that most important distinction not the specificities of each unique value."
+      ],
+      "metadata": {
+        "id": "N51OZsEy53Tw"
+      },
+      "id": "N51OZsEy53Tw"
     },
     {
       "cell_type": "markdown",
