--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -2634,11 +2634,11 @@
         "print(df[var].unique(),'\\n')"
       ],
       "metadata": {
-        "id": "2dZja4quf5DZ",
-        "outputId": "926ee482-72b3-4b54-f42d-9bb943e54c68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2dZja4quf5DZ",
+        "outputId": "926ee482-72b3-4b54-f42d-9bb943e54c68"
       },
       "id": "2dZja4quf5DZ",
       "execution_count": 27,
@@ -2761,11 +2761,11 @@
         "print('After coercion: \\n', df[var].describe(),'\\n')"
       ],
       "metadata": {
-        "id": "JBcQTNlnjtW7",
-        "outputId": "b0aced5e-0781-4642-af86-83fd68532c1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JBcQTNlnjtW7",
+        "outputId": "b0aced5e-0781-4642-af86-83fd68532c1a"
       },
       "id": "JBcQTNlnjtW7",
       "execution_count": 29,
@@ -2798,6 +2798,52 @@
         "id": "N51OZsEy53Tw"
       },
       "id": "N51OZsEy53Tw"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.loc[df['ImposedSentenceAllChargeInContactEvent'].isna(), 'ImposedSentenceAllChargeInContactEvent'] = 9 # value missing\n",
+        "\n",
+        "df.loc[ df['ImposedSentenceAllChargeInContactEvent'] == 0, 'ImposedSentenceAllChargeInContactEvent'] = 0 # no sentence\n",
+        "df.loc[ (df['ImposedSentenceAllChargeInContactEvent'] < 12) & (df['ImposedSentenceAllChargeInContactEvent'] != 0), 'ImposedSentenceAllChargeInContactEvent'] = 1 # less than a year\n",
+        "df.loc[ df['ImposedSentenceAllChargeInContactEvent'] >= 12, 'ImposedSentenceAllChargeInContactEvent'] = 2 # 1 year or more"
+      ],
+      "metadata": {
+        "id": "qX8XwjQS_17w"
+      },
+      "id": "qX8XwjQS_17w",
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "var = 'ImposedSentenceAllChargeInContactEvent'\n",
+        "\n",
+        "print(df[var].value_counts())"
+      ],
+      "metadata": {
+        "id": "vKWlTZp-BhN8",
+        "outputId": "e026671c-207d-413e-bb9d-2bf9e6445e37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "vKWlTZp-BhN8",
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ImposedSentenceAllChargeInContactEvent\n",
+            "1    13403\n",
+            "0     4953\n",
+            "2     4630\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
