Saving progress on Q 3

--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -3323,11 +3323,11 @@
         "print(df['Sex'].value_counts())"
       ],
       "metadata": {
-        "id": "7HWdcVnNLgDG",
-        "outputId": "bf8259e2-4ddd-4159-b97b-6296f668a335",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7HWdcVnNLgDG",
+        "outputId": "bf8259e2-4ddd-4159-b97b-6296f668a335"
       },
       "id": "7HWdcVnNLgDG",
       "execution_count": 14,
@@ -3399,11 +3399,11 @@
         "print(df['Type'].value_counts())"
       ],
       "metadata": {
-        "id": "xOzPSFBcQIL_",
-        "outputId": "0e910be5-be7a-4dc8-84ae-59ef834167ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xOzPSFBcQIL_",
+        "outputId": "0e910be5-be7a-4dc8-84ae-59ef834167ed"
       },
       "id": "xOzPSFBcQIL_",
       "execution_count": 17,
@@ -3460,11 +3460,11 @@
         "print(df[\"Type\"].value_counts())"
       ],
       "metadata": {
-        "id": "SjQNTjZPRqOA",
-        "outputId": "0682e3c0-cb82-4205-878d-d730d1d6e56e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SjQNTjZPRqOA",
+        "outputId": "0682e3c0-cb82-4205-878d-d730d1d6e56e"
       },
       "id": "SjQNTjZPRqOA",
       "execution_count": 19,
@@ -3514,11 +3514,11 @@
         "print(df[\"Fatal Y/N\"].value_counts())"
       ],
       "metadata": {
-        "id": "9nSFbMehSp2Z",
-        "outputId": "5b0f4503-afe3-4a9d-fdc1-984238bd64b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9nSFbMehSp2Z",
+        "outputId": "5b0f4503-afe3-4a9d-fdc1-984238bd64b4"
       },
       "id": "9nSFbMehSp2Z",
       "execution_count": 21,
@@ -3573,11 +3573,11 @@
         "print(df[\"Fatal Y/N\"].value_counts())"
       ],
       "metadata": {
-        "id": "sM6Rbxv0TYUz",
-        "outputId": "f3ca9a14-8f31-48e0-9fc5-c4219f357272",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sM6Rbxv0TYUz",
+        "outputId": "f3ca9a14-8f31-48e0-9fc5-c4219f357272"
       },
       "id": "sM6Rbxv0TYUz",
       "execution_count": 33,
@@ -3907,12 +3907,12 @@
         "pd.crosstab(df['Fatal Y/N'], df['Type'])"
       ],
       "metadata": {
-        "id": "JvWHepfhT-y1",
-        "outputId": "de108153-35d0-4fda-9004-8d71669372d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "JvWHepfhT-y1",
+        "outputId": "de108153-35d0-4fda-9004-8d71669372d5"
       },
       "id": "JvWHepfhT-y1",
       "execution_count": 29,
@@ -4218,12 +4218,12 @@
         "pd.crosstab(df['Fatal Y/N'], df['Sex'])"
       ],
       "metadata": {
-        "id": "czrIx9mRUFOq",
-        "outputId": "e4e99581-bbbf-4032-fd08-c71d91ba5b00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "czrIx9mRUFOq",
+        "outputId": "e4e99581-bbbf-4032-fd08-c71d91ba5b00"
       },
       "id": "czrIx9mRUFOq",
       "execution_count": 35,
@@ -4535,11 +4535,11 @@
         "print(df.columns)"
       ],
       "metadata": {
-        "id": "hxq9JjRxdKuc",
-        "outputId": "70dd5f34-4809-4ff6-f421-800bdded22ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hxq9JjRxdKuc",
+        "outputId": "70dd5f34-4809-4ff6-f421-800bdded22ba"
       },
       "id": "hxq9JjRxdKuc",
       "execution_count": 39,
@@ -4618,11 +4618,11 @@
         "print(f\"Proportion of attacks by white sharks: {white_shark_proportion:.2%}\")"
       ],
       "metadata": {
-        "id": "rNxUr-17eWGi",
-        "outputId": "f058c6c7-a6bc-4d0c-9eb8-9550cb6fd942",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rNxUr-17eWGi",
+        "outputId": "f058c6c7-a6bc-4d0c-9eb8-9550cb6fd942"
       },
       "id": "rNxUr-17eWGi",
       "execution_count": 42,
@@ -4659,18 +4659,43 @@
       "cell_type": "markdown",
       "source": [
         "3.1\n",
+        "It's about component of data cleaning called data tidying, and how we can make data cleaning easier and more effective. Tidy datasets have a specific, consistent structure that provide an advantage for gaining insights from analysis and modeling.\n",
         "\n",
         "3.2\n",
+        "The \"tidy data standard\" is the standard of structuring the dataset in a specific way that makes it easier and more efficient to analyse the data.\n",
         "\n",
         "3.3\n",
+        "Every messy dataset is messy in its own way, meaning that data sets that are not tidy, are all organized in very different unique ways, which makes it difficult to analyze them in a standardized way each time you deal with data.\n",
+        "\n",
+        "The second sentence means that, for a given dataset, it may be unclear or a bit confusing how the author of the dataset chose to organize observations and variables. Some variables may seem like they should be categories of one variable, and some observations may not make sense all in one column.\n",
         "\n",
         "3.4\n",
+        "* Values - usually either numbers or strings\n",
+        "* Variables - a variable contains all values that measure the same underlying attribute across units (ex. temp, height)\n",
+        "* Observations - contains all values measured on the same unit across attributes (ex. person, day)\n",
         "\n",
         "3.5\n",
+        "Tidy data = a standard way of mapping the meaning of a dataset to its structure\n",
+        "* each variable forms a column\n",
+        "* each observation forms a row\n",
+        "* each type of observational unit forms a table\n",
         "\n",
         "3.6\n",
         "\n",
+        "5 most common problems\n",
+        "1. column headers are values not variable names\n",
+        "2. multiple values are stored in one column\n",
+        "3. variables are stored in both rows and columns\n",
+        "4. multiple types of observational units are stored in the same table\n",
+        "5. a single observational unit is stored in multiple tables\n",
+        "\n",
+        "The data in Table 4 are messy because the column headers are a value (the income) which could be better expressed as its own column, and then the frequency could be it's own column.\n",
+        "Melting a dataset is to stack it by turning columns which are already variables into rows.\n",
+        "\n",
         "3.7\n",
+        "Table 11 is messy because there are columns that should really be consolidated all into 1 column. There is a column for each possible day of the month when that could be melted into a column containing each observation for each day.\n",
+        "\n",
+        "Table 12 is molten and tidy because\n",
         "\n",
         "3.8\n"
       ],
