Saving progress, finishing Q3 written answers

--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -4695,9 +4695,10 @@
         "3.7\n",
         "Table 11 is messy because there are columns that should really be consolidated all into 1 column. There is a column for each possible day of the month when that could be melted into a column containing each observation for each day.\n",
         "\n",
-        "Table 12 is molten and tidy because\n",
+        "Table 12 is tidier than Table 11 because those day variables have been molten into their own column.\n",
         "\n",
-        "3.8\n"
+        "3.8\n",
+        "The chicken-and-egg problem is that if tidy data is only as useful as tools that work with it, then those tools will be linked to working with tidy data. She hopes that this tidy data framework is not the final solution, and that in the future others will continue to develop even better solutions and strategies. She also mentions that in the future she wants to use methodologies from other fields such as user-centered design and human-computer interaction to further improvement in designing data analysis tools.\n"
       ],
       "metadata": {
         "id": "XvyG7Zdpmr0q"
